front color change, added descriptions

--- a/voyager/templates/about.html
+++ b/voyager/templates/about.html
@@ -44,23 +44,23 @@
 	</div>
 	<!-- 	<div class="about-launch">
 			<div class="page-container">
-					<div class="about-wrapper">
-							<div class="line-break"></div>
-							<h3 class="mission-title"> Mission </h3>
-							<p class="paragraph black">
-									Voyager was started to connect top tier talent at UC Berkeley with innovative companies in the Bay Area. The founders envisioned a future where companies and students could work together to collaboratively solve big problems. We do this by providing insightful deliverables that are actionable and align with a client's long term mission.
-							</p>
-							<h3 class="mission-title"> History </h3>
-							<p class="paragraph black">
-									Voyager has partnered with clients across the tech spectrum with a proven track record of solving difficult, complex problems using fact-based, expert supported solutions. We have always valued recommending solutions that uphold the client's interest, supporting solutions with data, and working tirelessly to build the right strategy. Each team is built around each client and strives each and every day to craft an innovative solution that delivers direct value to a clients's goal and provides thorough insights for the future.
-									<br><br>
-									Even though Voyager was founded in the Fall of 2012, we have been growing fast. Our client list already includes notable companies such as Amazon, the National Basketball Association, and Instagram. And with less than 50 alumni and current members combined, we have already placed our consultants into firms such as Goldman Sachs and Bain & Company.
-							</p>
-							<h3 class="mission-title"> Culture </h3>
-							<p class="paragraph black">
-									We continually develop our consultants. We hold internal seminars, trainings, and professional events to help members advance their critical thinking and networking skills. Voyager also prides itself in its social culture. Each consulting team becomes close over the semester, bonded by multiple social events, activities, and retreats. At the heart of Voyager, there is more than a consulting club; there is a family of driven individuals who strive to create an enriching personal and professional experience for every member.
-							</p>
-					</div>
+							<div class="about-wrapper">
+											<div class="line-break"></div>
+											<h3 class="mission-title"> Mission </h3>
+											<p class="paragraph black">
+															Voyager was started to connect top tier talent at UC Berkeley with innovative companies in the Bay Area. The founders envisioned a future where companies and students could work together to collaboratively solve big problems. We do this by providing insightful deliverables that are actionable and align with a client's long term mission.
+											</p>
+											<h3 class="mission-title"> History </h3>
+											<p class="paragraph black">
+															Voyager has partnered with clients across the tech spectrum with a proven track record of solving difficult, complex problems using fact-based, expert supported solutions. We have always valued recommending solutions that uphold the client's interest, supporting solutions with data, and working tirelessly to build the right strategy. Each team is built around each client and strives each and every day to craft an innovative solution that delivers direct value to a clients's goal and provides thorough insights for the future.
+															<br><br>
+															Even though Voyager was founded in the Fall of 2012, we have been growing fast. Our client list already includes notable companies such as Amazon, the National Basketball Association, and Instagram. And with less than 50 alumni and current members combined, we have already placed our consultants into firms such as Goldman Sachs and Bain & Company.
+											</p>
+											<h3 class="mission-title"> Culture </h3>
+											<p class="paragraph black">
+															We continually develop our consultants. We hold internal seminars, trainings, and professional events to help members advance their critical thinking and networking skills. Voyager also prides itself in its social culture. Each consulting team becomes close over the semester, bonded by multiple social events, activities, and retreats. At the heart of Voyager, there is more than a consulting club; there is a family of driven individuals who strive to create an enriching personal and professional experience for every member.
+											</p>
+							</div>
 			</div>
 	</div> -->
 	<div class="generic-whitespace"></div>
@@ -75,11 +75,21 @@
 					<div class="executive-text">
 						Felix Liu
 					</div>
+					<div class="executive-description">
+						<p>
+							A MOTHAFUCKING BADASS
+						</p>
+					</div>
 				</div>
 				<div class="executive-member">
 					<div class="executive-picture savan-picture"></div>
 					<div class="executive-text">
 						Savan Patel
+					</div>
+					<div class="executive-description">
+						<p>
+							Savan is a third year studying Computer Science and Rhetoric. Within Voyager, he helped grow the club’s client base to include later stage and established tech companies by solidifying agreements with clients such as Amazon, Pinterest, Box and Twitch TV. This summer he interned at Box in the User Operations department and currently is a venture capital associate at DoubleRock. In his free time, he enjoys following his hometown Trailblazers and watching his favorite sitcom The League.
+						</p>
 					</div>
 				</div>
 				<div class="executive-member">
@@ -87,11 +97,21 @@
 					<div class="executive-text">
 						Olivia Gu
 					</div>
+					<div class="executive-description">
+						<p>
+							Olivia is a third year studying Business Administration and Computer Science. Olivia began in Voyager as a consultant on the Twitch project and later was the project manager on the NBA project. Outside Voyager, Olivia has interned at Facebook and UBS and in her free time, enjoys sailing and going on adventures into the city.
+						</p>
+					</div>
 				</div>
 				<div class="executive-member">
 					<div class="executive-picture ted-picture"></div>
 					<div class="executive-text">
 						Ted Xiao
+					</div>
+					<div class="executive-description">
+						<p>
+							Ted is a third year majoring in EECS and minoring in IEOR. Ted joined Voyager as a freshman on the Warby Parker team, and has served as a project leader for the Valve project. In his spare time, Ted enjoys playing chess and roller hockey.
+						</p>
 					</div>
 				</div>
 				<div class="executive-member">
@@ -99,54 +119,59 @@
 					<div class="executive-text">
 						Philmon Tanuri
 					</div>
+					<div class="executive-description">
+						<p>
+							Philmon is a third year double-majoring in Business Administration and Economics. Philmon joined Voyager during his freshman year and started as a consultant in the Box team. This past summer, he interned McKinsey & Company as a Business Analyst. He also currently sits on the International Board of Directors for YCAB Foundation, an Indonesian-based social enterprise that focuses on microfinance. During his free time, he enjoys playing basketball and watching the English Premier League.
+						</p>
+					</div>
 				</div>
 			</div>
 			<!-- <h3 class="mission-title"> Executives </h3> -->
 			<!-- <div class="executive-box"></div> -->
 			<!-- 			<div class="executive-member">
-					<div class="executive-picture savan-picture"></div>
-					<div class="executive-text">
-							<h3> President - Savan Patel </h3>
-							<p>
+				<div class="executive-picture savan-picture"></div>
+				<div class="executive-text">
+					<h3> President - Savan Patel </h3>
+					<p>
 									Savan is a third year studying Computer Science and Rhetoric. Within Voyager, he helped grow the club’s client base to include later stage and established tech companies by solidifying agreements with clients such as Amazon, Pinterest, Box and Twitch TV. This summer he interned at Box in the User Operations department and currently is a venture capital associate at DoubleRock. In his free time, he enjoys following his hometown Trailblazers and watching his favorite sitcom The League.
-							</p>
-					</div>
+					</p>
+				</div>
 			</div>
 			<div class="executive-member">
-					<div class="executive-picture felix-picture"></div>
-					<div class="executive-text">
-							<h3> Vice President - Felix Liu </h3>
-							<p>
+				<div class="executive-picture felix-picture"></div>
+				<div class="executive-text">
+					<h3> Vice President - Felix Liu </h3>
+					<p>
 								A Badass
-							</p>
-					</div>
+					</p>
+				</div>
 			</div>
 			<div class="executive-member">
-					<div class="executive-picture olivia-picture"></div>
-					<div class="executive-text">
-							<h3> Vice President - Olivia Gu </h3>
-							<p>
+				<div class="executive-picture olivia-picture"></div>
+				<div class="executive-text">
+					<h3> Vice President - Olivia Gu </h3>
+					<p>
 									Savan is a third year studying Computer Science and Rhetoric. Within Voyager, he helped grow the club’s client base to include later stage and established tech companies by solidifying agreements with clients such as Amazon, Pinterest, Box and Twitch TV. This summer he interned at Box in the User Operations department and currently is a venture capital associate at DoubleRock. In his free time, he enjoys following his hometown Trailblazers and watching his favorite sitcom The League.
-							</p>
-					</div>
+					</p>
+				</div>
 			</div>
 			<div class="executive-member">
-					<div class="executive-picture ted-picture"></div>
-					<div class="executive-text">
-							<h3> Vice President - Ted Xiao </h3>
-							<p>
+				<div class="executive-picture ted-picture"></div>
+				<div class="executive-text">
+					<h3> Vice President - Ted Xiao </h3>
+					<p>
 									Savan is a third year studying Computer Science and Rhetoric. Within Voyager, he helped grow the club’s client base to include later stage and established tech companies by solidifying agreements with clients such as Amazon, Pinterest, Box and Twitch TV. This summer he interned at Box in the User Operations department and currently is a venture capital associate at DoubleRock. In his free time, he enjoys following his hometown Trailblazers and watching his favorite sitcom The League.
-							</p>
-					</div>
+					</p>
+				</div>
 			</div>
 			<div class="executive-member">
-					<div class="executive-picture philmon-picture"></div>
-					<div class="executive-text">
-							<h3> Vice President - Philmon Tanuri </h3>
-							<p>
+				<div class="executive-picture philmon-picture"></div>
+				<div class="executive-text">
+					<h3> Vice President - Philmon Tanuri </h3>
+					<p>
 									Philmon is a third year double-majoring in Business Administration and Economics. Philmon joined Voyager during his freshman year and started as a consultant in the Box team. This past summer, he interned McKinsey & Company as a Business Analyst. He also currently sits on the International Board of Directors for YCAB Foundation, an Indonesian-based social enterprise that focuses on microfinance. During his free time, he enjoys playing basketball and watching the English Premier League.
-							</p>
-					</div>
+					</p>
+				</div>
 			</div> -->
 			<div class="generic-whitespace"></div>
 			<h3 class="executive-panel-title"> Project Leaders </h3>
@@ -206,7 +231,6 @@
 				<div class="company facebook-picture"><div class="company-overlay"></div></div>
 				<div class="company zs-picture"><div class="company-overlay"></div></div>
 				<div class="company rdio-picture"><div class="company-overlay"></div></div>
-
 				<!-- fourth row -->
 				<div class="company cisco-picture"><div class="company-overlay"></div></div>
 				<div class="company apple-picture"><div class="company-overlay"></div></div>
@@ -222,8 +246,7 @@
 			</div>
 		</div>
 	</div>
-<!-- // Mckinsey, Cisco, Nest, Google, Box, Pimco, EY, Rdio, Altman-Landry, litman, department of treasury, IBM, Wells Fargo, KKR, Facebook, NBC, ZS Associates, Citrix -->
-
+	<!-- // Mckinsey, Cisco, Nest, Google, Box, Pimco, EY, Rdio, Altman-Landry, litman, department of treasury, IBM, Wells Fargo, KKR, Facebook, NBC, ZS Associates, Citrix -->
 	<div class="generic-whitespace"></div>
 </body>
 {% include "footer.html" %}
