--- a/voyager/static/css/main.css
+++ b/voyager/static/css/main.css
@@ -12,6 +12,15 @@ body {
 
 }
 
+.background-overlay {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	background-color: black;
+	opacity: 0.3;
+	z-index: 3;
+}
+
 .white {
 	color: white;
 }
@@ -186,7 +195,13 @@ body {
 	margin-left: 5px;
 	margin-bottom: 10px;
 	display: inline-block;
+	/*border: 2px solid black;*/
+	/*z-index: 1;*/
 }
+
+/*.executive-member:hover {
+	z-index: 2;
+}*/
 
 .executive-picture {
 	/*float: left;*/
@@ -197,13 +212,31 @@ body {
 
 .executive-text {
 	/*position: absolute;*/
+	/*z-index: 1;*/
 	background-color: white;
+	/*color: white;*/
 	/*font-weight: bold;*/
 	font-size: 200%;
 	line-height: 60px;
-	height: 60px;
+	/*height: 400px;*/
 	width: 100%;
 	overflow: hidden;
+}
+
+.executive-description {
+	background-color: white;
+	/*display: none;*/
+	opacity: 0;
+	display: none;
+	/*color: white;*/
+	/*text-align: left;*/
+	width: 100%;
+	position: absolute;
+	z-index: 1;
+}
+
+.executive-description > p {
+	margin-left: 10px; margin-right: 10px;
 }
 
 .executive-box {
@@ -283,7 +316,7 @@ body {
 .picture-frame {
 	width: 56%;
 	height: 100%;
-	background-color: #096589;
+	background-color: #779CAB;
 	position: absolute;
 	/*z-index: 1;*/
 	/*overflow: hidden;*/
@@ -302,7 +335,7 @@ body {
 
 .text-frame {
 	text-align: center;
-	background-color: #096589;
+	background-color: #779CAB;
 	position: absolute;
 	color: white;
 	margin: auto;
