--- a/voyager/static/css/main.css
+++ b/voyager/static/css/main.css
@@ -316,7 +316,7 @@ body {
 .picture-frame {
 	width: 56%;
 	height: 100%;
-	background-color: #779CAB;
+	background-color: #404040;
 	position: absolute;
 	/*z-index: 1;*/
 	/*overflow: hidden;*/
@@ -386,15 +386,16 @@ body {
 	position: absolute;
 	color: white;
 	top: 0;
-	display: flex;
+	bottom: 0;
+/*	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: center;*/
 
 
 }
 
 .member-display {
-	background-color: #096589 !important;
+	/*background-color: #096589 !important;*/
 }
 
 .grid-picture {
