--- a/voyager/templates/index.html
+++ b/voyager/templates/index.html
@@ -15,7 +15,11 @@
 	</div>
 </div>
 <div class="title-divs carousel-display">
-	<div class="carousel-divs current-carousel"></div>
+	<!-- <div class="carousel-divs current-carousel"></div> -->
+	<div class="carousel-divs pinterest-carousel"></div>
+	<div class="carousel-divs amazon-carousel"></div>
+	<div class="carousel-divs valve-carousel"></div>
+	<div class="carousel-divs instagram-carousel"></div>
 </div>
 <!-- <div id="carousel-display">
 		<div id="instagram-container"></div>
