--- a/voyager/static/css/main.css
+++ b/voyager/static/css/main.css
@@ -12,6 +12,10 @@ body {
 
 }
 
+.display-appear {
+	display: block;
+}
+
 .background-overlay {
 	position: fixed;
 	width: 100%;
@@ -107,7 +111,7 @@ body {
 	height: 70px;
 	position: absolute;
 	top: 70; left: 70;
-	z-index: 1;
+	/*z-index: 1;*/
 }
 
 .arrow-wrapper-right {
@@ -118,7 +122,7 @@ body {
 	height: 70px;
 	position: absolute;
 	top: 70; right: 70;
-	z-index: 1;
+	/*z-index: 1;*/
 }
 
 .arrow-wrapper-right:hover {
@@ -697,6 +701,7 @@ body {
 	position: absolute;
 	height: 100%;
 	width: 100%;
+	/*display: none;*/
 }
 
 .title-logo-background {
