alterations to the home and about pages

--- a/voyager/templates/about.html
+++ b/voyager/templates/about.html
@@ -4,6 +4,10 @@
 	<div class="picture about-picture">
 		<h2 class="page-title"> About </h2>
 	</div>
+	<iframe class="voyager-video" src="http://www.youtube.com/embed/LDZX4ooRsWs?autoplay=1">
+		<!-- src="http://www.youtube.com/embed/XGSy3_Czz8k"> -->
+	</iframe>
+
 	<div class="about-panels">
 		<div class="six columns about-frame">
 			<div class="text-wrapper about-mission-text-height">
@@ -173,10 +177,57 @@
 					</p>
 				</div>
 			</div> -->
+
 			<div class="generic-whitespace"></div>
 			<h3 class="executive-panel-title"> Project Leaders </h3>
 			<div class="line-break"></div>
-			<div class="pl-members">
+			<div class="executive-box">
+				<div class="executive-member">
+					<div class="executive-picture ajay-picture"></div>
+					<div class="executive-text">
+						 Ajay Shanmugham
+					</div>
+					<div class="executive-description">
+						<p>
+							Description
+						</p>
+					</div>
+				</div>
+				<div class="executive-member">
+					<div class="executive-picture sumedh-picture"></div>
+					<div class="executive-text">
+						Sumedh Bhattacharya
+					</div>
+					<div class="executive-description">
+						<p>
+							Description
+						</p>
+					</div>
+				</div>
+				<div class="executive-member">
+					<div class="executive-picture sanchit-picture"></div>
+					<div class="executive-text">
+						 Sanchit Shorewala
+					</div>
+					<div class="executive-description">
+						<p>
+							Description
+						</p>
+					</div>
+				</div>
+				<div class="executive-member">
+					<div class="executive-picture gwin-picture"></div>
+					<div class="executive-text">
+						Gwin Zhou
+					</div>
+					<div class="executive-description">
+						<p>
+							Description
+						</p>
+					</div>
+				</div>
+			</div>
+<!-- 			<div class="pl-members">
 				<div class="pl-picture-box">
 					<div class="pl-picture ajay-picture"></div>
 					<div class='pl-description'>
@@ -201,7 +252,7 @@
 						<div class='major-title'> Sanchit Shorewala </div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 			
 		</div>
 	</div>
@@ -242,7 +293,7 @@
 				<div class="company surveymonkey-picture"><div class="company-overlay"></div></div>
 				<div class="company acrobat-picture"><div class="company-overlay"></div></div>
 				<div class="company google-picture"><div class="company-overlay"></div></div>
-				<div class="company intel-picture"><div class="company-overlay"></div></div>
+				<!-- <div class="company intel-picture"><div class="company-overlay"></div></div> -->
 			</div>
 		</div>
 	</div>
