--- a/voyager/static/css/main.css
+++ b/voyager/static/css/main.css
@@ -19,10 +19,11 @@ body {
 .background-overlay {
 	position: fixed;
 	width: 100%;
+	display: none;
 	height: 100%;
 	background-color: black;
-	opacity: 0.3;
-	z-index: 3;
+	opacity: 0;
+	z-index: 2;
 }
 
 .white {
@@ -193,8 +194,7 @@ body {
 .executive-member {
 	/*height: 400px;*/
 	position: relative !important;
-	background-color: gray;
-	position: relative;
+	background-color: white;
 	margin-right: 5px;
 	margin-left: 5px;
 	margin-bottom: 10px;
@@ -206,6 +206,12 @@ body {
 /*.executive-member:hover {
 	z-index: 2;
 }*/
+
+.voyager-video {
+	width: 100%;
+	height: 70%;
+	border: none;
+}
 
 .executive-picture {
 	/*float: left;*/
@@ -221,6 +227,7 @@ body {
 	/*color: white;*/
 	/*font-weight: bold;*/
 	font-size: 200%;
+
 	line-height: 60px;
 	/*height: 400px;*/
 	width: 100%;
@@ -241,6 +248,8 @@ body {
 
 .executive-description > p {
 	margin-left: 10px; margin-right: 10px;
+	font-family: 'Lato', sans-serif;
+
 }
 
 .executive-box {
@@ -348,7 +357,7 @@ body {
 
 .about-frame {
 	max-width: 100% !important;
-	height: 100%;
+	height: 70%;
 	border: 2px solid black;
 	display: inline-block;
 	margin: 0;
@@ -477,6 +486,7 @@ body {
 	width: 100%;
 	background-color: white;
 	position: relative;
+	/*overflow: auto;*/
 }
 
 .career-launch {
@@ -592,7 +602,7 @@ body {
 .page-container {
 	width: 80%;
 	position: relative;
-	overflow: auto;
+	/*overflow: auto;*/
 	margin: 0 auto;
 }
 
@@ -638,6 +648,7 @@ body {
 .navbar-selector {
 	/*font-weight: bold;*/
 	font-size: 150%;
+	font-family: 'Lato', sans-serif;
 	width: 100%;
 	height: 50px;
 	line-height: 50px;
