--- a/voyager/templates/careers.html
+++ b/voyager/templates/careers.html
@@ -2,7 +2,9 @@
 <meta name="title" content="#navbar-careers">
 
 <body>
-	<div class="picture career-picture"></div>
+	<div class="picture career-picture">
+		<h2 class="page-title"> Careers </h2>
+	</div>
 
 <!-- 	<div class="picture-text-overlay">
 		<p>
@@ -11,14 +13,19 @@
 	</div> -->
 	<div class="career-launch">
 		<div class="page-container">
-			<h2 class="page-title"> Careers </h2>
+			<div class="career-whitespace"></div>
+			<!-- <h2 class="page-title"> Careers </h2> -->
+			<h3 class="executive-panel-title"> Full Time & Internships </h3>
+
 			<div class="line-break career-line-break"></div>
 			<!-- <div class="about-selector">2015</div> -->
 			<!-- <div class="about-selector">2014</div> -->
-			<!-- <div class="career-whitespace"></div> -->
-			<h3 class="page-title subtitle"> Full Time & Internships </h3>
+			<!-- <h3 class="page-title subtitle"> Full Time & Internships </h3> -->
 			<h4> 2015 </h4>
-			<div id="table-container"></div>
+			<div id="table-container-2015"></div>
+			<div class="whitespace"></div>
+			<h4> 2014 </h4>
+			<div id="table-container-2014"></div>
 			<div class="whitespace"></div>
 		</div>
 	</div>
