--- a/voyager/templates/about.html
+++ b/voyager/templates/about.html
@@ -4,10 +4,9 @@
 	<div class="picture about-picture">
 		<h2 class="page-title"> About </h2>
 	</div>
-	<iframe class="voyager-video" src="http://www.youtube.com/embed/LDZX4ooRsWs?autoplay=1">
-		<!-- src="http://www.youtube.com/embed/XGSy3_Czz8k"> -->
+	<iframe class="voyager-video" src="http://www.youtube.com/embed/LDZX4ooRsWs?autohide=1">
+	<!-- src="http://www.youtube.com/embed/XGSy3_Czz8k"> -->
 	</iframe>
-
 	<div class="about-panels">
 		<div class="six columns about-frame">
 			<div class="text-wrapper about-mission-text-height">
@@ -48,29 +47,29 @@
 	</div>
 	<!-- 	<div class="about-launch">
 			<div class="page-container">
-									<div class="about-wrapper">
-															<div class="line-break"></div>
-															<h3 class="mission-title"> Mission </h3>
-															<p class="paragraph black">
-																					Voyager was started to connect top tier talent at UC Berkeley with innovative companies in the Bay Area. The founders envisioned a future where companies and students could work together to collaboratively solve big problems. We do this by providing insightful deliverables that are actionable and align with a client's long term mission.
-															</p>
-															<h3 class="mission-title"> History </h3>
-															<p class="paragraph black">
-																					Voyager has partnered with clients across the tech spectrum with a proven track record of solving difficult, complex problems using fact-based, expert supported solutions. We have always valued recommending solutions that uphold the client's interest, supporting solutions with data, and working tirelessly to build the right strategy. Each team is built around each client and strives each and every day to craft an innovative solution that delivers direct value to a clients's goal and provides thorough insights for the future.
-																					<br><br>
-																					Even though Voyager was founded in the Fall of 2012, we have been growing fast. Our client list already includes notable companies such as Amazon, the National Basketball Association, and Instagram. And with less than 50 alumni and current members combined, we have already placed our consultants into firms such as Goldman Sachs and Bain & Company.
-															</p>
-															<h3 class="mission-title"> Culture </h3>
-															<p class="paragraph black">
-																					We continually develop our consultants. We hold internal seminars, trainings, and professional events to help members advance their critical thinking and networking skills. Voyager also prides itself in its social culture. Each consulting team becomes close over the semester, bonded by multiple social events, activities, and retreats. At the heart of Voyager, there is more than a consulting club; there is a family of driven individuals who strive to create an enriching personal and professional experience for every member.
-															</p>
-									</div>
+										<div class="about-wrapper">
+																	<div class="line-break"></div>
+																	<h3 class="mission-title"> Mission </h3>
+																	<p class="paragraph black">
+																								Voyager was started to connect top tier talent at UC Berkeley with innovative companies in the Bay Area. The founders envisioned a future where companies and students could work together to collaboratively solve big problems. We do this by providing insightful deliverables that are actionable and align with a client's long term mission.
+																	</p>
+																	<h3 class="mission-title"> History </h3>
+																	<p class="paragraph black">
+																								Voyager has partnered with clients across the tech spectrum with a proven track record of solving difficult, complex problems using fact-based, expert supported solutions. We have always valued recommending solutions that uphold the client's interest, supporting solutions with data, and working tirelessly to build the right strategy. Each team is built around each client and strives each and every day to craft an innovative solution that delivers direct value to a clients's goal and provides thorough insights for the future.
+																								<br><br>
+																								Even though Voyager was founded in the Fall of 2012, we have been growing fast. Our client list already includes notable companies such as Amazon, the National Basketball Association, and Instagram. And with less than 50 alumni and current members combined, we have already placed our consultants into firms such as Goldman Sachs and Bain & Company.
+																	</p>
+																	<h3 class="mission-title"> Culture </h3>
+																	<p class="paragraph black">
+																								We continually develop our consultants. We hold internal seminars, trainings, and professional events to help members advance their critical thinking and networking skills. Voyager also prides itself in its social culture. Each consulting team becomes close over the semester, bonded by multiple social events, activities, and retreats. At the heart of Voyager, there is more than a consulting club; there is a family of driven individuals who strive to create an enriching personal and professional experience for every member.
+																	</p>
+										</div>
 			</div>
 	</div> -->
 	<div class="generic-whitespace"></div>
 	<div class="about-launch">
 		<div class="page-container">
-			<h2 class="page-title"> Leadership </h2>
+			<!-- <h2 class="page-title"> Leadership </h2> -->
 			<h3 class="executive-panel-title"> Executives </h3>
 			<div class="line-break"></div>
 			<div class="executive-box">
@@ -177,7 +176,6 @@
 					</p>
 				</div>
 			</div> -->
-
 			<div class="generic-whitespace"></div>
 			<h3 class="executive-panel-title"> Project Leaders </h3>
 			<div class="line-break"></div>
@@ -185,7 +183,7 @@
 				<div class="executive-member">
 					<div class="executive-picture ajay-picture"></div>
 					<div class="executive-text">
-						 Ajay Shanmugham
+						Ajay Shanmugham
 					</div>
 					<div class="executive-description">
 						<p>
@@ -207,7 +205,7 @@
 				<div class="executive-member">
 					<div class="executive-picture sanchit-picture"></div>
 					<div class="executive-text">
-						 Sanchit Shorewala
+						Sanchit Shorewala
 					</div>
 					<div class="executive-description">
 						<p>
@@ -227,31 +225,31 @@
 					</div>
 				</div>
 			</div>
-<!-- 			<div class="pl-members">
-				<div class="pl-picture-box">
-					<div class="pl-picture ajay-picture"></div>
-					<div class='pl-description'>
-						<div class='major-title'> Ajay Shanmugham </div>
+			<!-- 			<div class="pl-members">
+					<div class="pl-picture-box">
+							<div class="pl-picture ajay-picture"></div>
+							<div class='pl-description'>
+									<div class='major-title'> Ajay Shanmugham </div>
+							</div>
 					</div>
-				</div>
-				<div class="pl-picture-box">
-					<div class="pl-picture gwin-picture"></div>
-					<div class='pl-description'>
-						<div class='major-title'> Gwin Zhou </div>
+					<div class="pl-picture-box">
+							<div class="pl-picture gwin-picture"></div>
+							<div class='pl-description'>
+									<div class='major-title'> Gwin Zhou </div>
+							</div>
 					</div>
-				</div>
-				<div class="pl-picture-box">
-					<div class="pl-picture sumedh-picture"></div>
-					<div class='pl-description'>
-						<div class='major-title'> Sumedh Bhattacharya </div>
+					<div class="pl-picture-box">
+							<div class="pl-picture sumedh-picture"></div>
+							<div class='pl-description'>
+									<div class='major-title'> Sumedh Bhattacharya </div>
+							</div>
 					</div>
-				</div>
-				<div class="pl-picture-box">
-					<div class="pl-picture sanchit-picture"></div>
-					<div class='pl-description'>
-						<div class='major-title'> Sanchit Shorewala </div>
+					<div class="pl-picture-box">
+							<div class="pl-picture sanchit-picture"></div>
+							<div class='pl-description'>
+									<div class='major-title'> Sanchit Shorewala </div>
+							</div>
 					</div>
-				</div>
 			</div> -->
 			
 		</div>
