--- a/voyager/templates/about.html
+++ b/voyager/templates/about.html
@@ -4,7 +4,7 @@
 	<div class="picture about-picture">
 		<h2 class="page-title"> About </h2>
 	</div>
-	<iframe class="voyager-video" src="http://www.youtube.com/embed/LDZX4ooRsWs?autohide=1">
+	<iframe class="voyager-video" src="https://www.youtube.com/embed/LDZX4ooRsWs?autohide=1">
 	<!-- src="http://www.youtube.com/embed/XGSy3_Czz8k"> -->
 	</iframe>
 	<div class="about-panels">
