basic recruiting frame done, working on services

--- a/voyager/static/css/image-import.css
+++ b/voyager/static/css/image-import.css
@@ -147,6 +147,15 @@
 	background-image: url("../images/nest-logo.png")
 }
 
+.services-picture {
+	background-image: url("../images/services.jpeg")
+}
+
+.recruiting-picture {
+	background-image: url("../images/recruiting.jpeg");
+}
+
+
 .instagram-logo {
 	position: absolute;
 	max-height: 100%;
