--- a/voyager/static/css/main.css
+++ b/voyager/static/css/main.css
@@ -348,7 +348,8 @@ body {
 
 .text-frame {
 	text-align: center;
-	background-color: #779CAB;
+	/*background-color: #779CAB;*/
+	background-color: #01B6AD;
 	position: absolute;
 	color: white;
 	margin: auto;
@@ -363,6 +364,17 @@ body {
 	margin: 0;
 	position: relative;
 	overflow: hidden;
+}
+
+.service-subject-frame {
+	max-width: 100% !important;
+	height: 40%;
+	border: 2px solid black;
+	display: inline-block;
+	margin: 0;
+	position: relative;
+	overflow: hidden;
+
 }
 
 .text-wrapper {
@@ -395,7 +407,8 @@ body {
 	width: 100%;
 	/*height: 50%;*/
 	text-align: center;
-	background-color: #404040;
+	/*background-color: #404040;*/
+	background-color: #0A4958;
 	position: absolute;
 	color: white;
 	top: 0;
@@ -496,6 +509,11 @@ body {
 	/*top: 450px;*/
 }
 
+.recruiting-wrapper {
+	width: 80%;
+	position: relative;
+}
+
 .about-alumni {
 	background-color: white;
 }
@@ -593,6 +611,7 @@ body {
 	margin: 0 auto;
 	display: none;
 	opacity: 0;
+	/*overflow: auto;*/
 }
 
 .table-style {
@@ -604,7 +623,7 @@ body {
 	font-family: 'Cabin', sans-serif !important;
 }
 
-	.page-container {
+.page-container {
 	width: 80%;
 	position: relative;
 	/*overflow: auto;*/
@@ -634,12 +653,15 @@ body {
 */
 .navbar-logo {
 	/*float: left;*/
-	max-width: 160px;
+	max-width: 170px;
 	max-height: 100%;
-	margin: 10px;
-	background-color: #282828 ;
-	content: url("../images/VClogo.png");
-
+	margin-top: 10px;
+	margin-left: 5px;
+	margin-bottom: 10px;
+	/*margin: 10px;*/
+	background-color: #282828;
+	/*content: url("../images/VClogo.png");*/
+	content: url("../images/voyager-logo.png");
 }
 
 .navbar-selectors {
@@ -763,7 +785,8 @@ body {
 }
 
 .redirect-display {
-	background-color: #C2B8B2;
+	/*background-color: #C2B8B2;*/
+	background-color: #F6E7D2;
 	overflow: hidden;
 	text-align: center;
 	/*min-width: 400px;*/
@@ -790,7 +813,7 @@ body {
 	/*height: 40px;*/
 	height: 70%;
 	width: 70%;
-	background-color: blue;
+	background-color: #336699;
 	/*width: 300px;*/
 }
 
