--- a/voyager/static/css/skeleton.css
+++ b/voyager/static/css/skeleton.css
@@ -49,7 +49,7 @@
 }
 
 /* For devices larger than 550px */
-@media (min-width: 550px) {
+@media (min-width: 600px) {
   .container {
     width: 80%; }
   .column,
@@ -62,7 +62,7 @@
   .one.column,
   .one.columns                    { width: 4.66666666667%; }
   .two.columns                    { width: 13.3333333333%; }
-  .three.columns                  { width: 22%;            }
+  .three.columns                  { width: 50%;            }
   .four.columns                   { width: 30.6666666667%; }
   .five.columns                   { width: 39.3333333333%; }
   .six.columns                    { width: 50%;            }
@@ -110,6 +110,11 @@
   .offset-by-one-half.column,
   .offset-by-one-half.columns     { margin-left: 52%; }
 
+}
+
+/* Larger than tablet */
+@media (min-width: 750px) {
+    .three.columns                  { width: 25%;            }
 }
 
 
