--- a/voyager/templates/contact.html
+++ b/voyager/templates/contact.html
@@ -1,7 +1,7 @@
 {% include "header.html" %}
 <meta name="title" content="#navbar-contact">
 <body>
-	<div class="picture recruiting-picture">
+	<div class="picture contact-picture">
 		<h2 class="page-title"> Contact </h2>
 	</div>
 	<div class="generic-whitespace"></div>
