--- a/voyager/templates/recruiting.html
+++ b/voyager/templates/recruiting.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="generic-whitespace"></div>
 	<div class="page-container">
-		<h3 class="executive-panel-title"> Schedule </h3>
+		<h3 class="executive-panel-title"> Timeline - 2015 </h3>
 		<div class="line-break"></div>
 		<table class="u-full-width table-style">
 			<tr class="cabin-font">
