--- a/voyager/static/css/image-import.css
+++ b/voyager/static/css/image-import.css
@@ -155,6 +155,10 @@
 	background-image: url("../images/recruiting.jpeg");
 }
 
+.contact-picture {
+	background-image: url("../images/contact.jpeg");
+}
+
 
 .instagram-logo {
 	position: absolute;
