--- a/voyager/templates/carousel/instagram.html
+++ b/voyager/templates/carousel/instagram.html
@@ -12,8 +12,9 @@
 		<div class="title-logo">
 			<div class="instagram-logo"></div>
 		</div>
-		<p class="sub-title-black"> First line of text that is only used for filler purposes <br>
-			Second line of text that is only used for filler purposes </p>
+		<p class="sub-title-gibson-black"> Client - Fall 2014 </p>
+		 <!-- <br> -->
+		<p class="sub-title-black">	Digital Advertising Market Assessment </p>
 <!-- 		<h2 class="sub-title"> First line of text that is only used for filler purposes</h2>
 		<h2 class="sub-title"> Second line of text that is only used for filler purposes</h2> -->
 	</div>
