--- a/voyager/templates/carousel/pinterest.html
+++ b/voyager/templates/carousel/pinterest.html
@@ -12,8 +12,8 @@
 		<div class="title-logo">
 			<div class="pinterest-logo"></div>
 		</div>
-		<p class="sub-title-black"> First line of text that is only used for filler purposes <br>
-			Second line of text that is only used for filler purposes </p>
+		<p class="sub-title-black"> Client - Spring 2014 <br>
+			Product Research and Monetization Strategy </p>
 <!-- 		<h2 class="sub-title"> First line of text that is only used for filler purposes</h2>
 		<h2 class="sub-title"> Second line of text that is only used for filler purposes</h2> -->
 	</div>
