--- a/voyager/templates/index.html
+++ b/voyager/templates/index.html
@@ -1,5 +1,4 @@
 {% include "header.html" %}
-
 <meta name="title" content="#navbar-home">
 <div class="side-navigation">
 	<div id="side-home" class="selector"></div>
@@ -23,7 +22,7 @@
 	<div class="carousel-divs instagram-carousel"></div>
 </div>
 <!-- <div id="carousel-display">
-		<div id="instagram-container"></div>
+			<div id="instagram-container"></div>
 </div> -->
 <!-- Maybe have JavaScript render this instead of having it
 done in the HTML as so -->
@@ -74,22 +73,26 @@ done in the HTML as so -->
 </div>
 <div class="title-divs redirect-display">
 	<div class="six columns redirect-box">
-		<div class="redirect-title-box topleft">
-			<h3 class="redirect-title"> Clients </h3>
+		<div class="redirect-title-box topleft nba-picture">
+			<div class="redirect-overlay"></div>
+			<h3 class="redirect-title"> Services </h3>
 		</div>
 	</div>
 	<div class="six columns redirect-box">
-		<div class="redirect-title-box topright">
-			<h3 class="redirect-title"> History </h3>
+		<div class="redirect-title-box topright ucberkeley-picture">
+			<div class="redirect-overlay"></div>
+			<h3 class="redirect-title"> About </h3>
 		</div>
 	</div>
 	<div class="six columns redirect-box">
-		<div class="redirect-title-box bottomleft">
+		<div class="redirect-title-box bottomleft apply-box-picture">
+			<div class="redirect-overlay"></div>
 			<h3 class="redirect-title"> Apply </h3>
 		</div>
 	</div>
 	<div class="six columns redirect-box">
-		<div class="redirect-title-box bottomright">
+		<div class="redirect-title-box bottomright voyager-group-picture">
+			<div class="redirect-overlay"></div>
 			<h3 class="redirect-title"> Team </h3>
 		</div>
 	</div>
