--- a/voyager/templates/about.html
+++ b/voyager/templates/about.html
@@ -68,6 +68,7 @@
 	</div> -->
 	<div class="generic-whitespace"></div>
 	<div class="about-launch">
+		<div class="sub-title-container"></div>
 		<div class="page-container">
 			<!-- <h2 class="page-title"> Leadership </h2> -->
 			<h3 class="executive-panel-title"> Executives </h3>
