--- a/voyager/templates/carousel/amazon.html
+++ b/voyager/templates/carousel/amazon.html
@@ -12,8 +12,8 @@
 		<div class="title-logo">
 			<div class="amazon-logo"></div>
 		</div>
-		<p class="sub-title-black"> First line of text that is only used for filler purposes <br>
-			Second line of text that is only used for filler purposes </p>
+		<p class="sub-title-black"> Client - Fall 2013 <br>
+			Industry Overview of Textbook Market</p>
 <!-- 		<h2 class="sub-title"> First line of text that is only used for filler purposes</h2>
 		<h2 class="sub-title"> Second line of text that is only used for filler purposes</h2> -->
 	</div>
