--- a/voyager/templates/carousel/valve.html
+++ b/voyager/templates/carousel/valve.html
@@ -12,8 +12,12 @@
 		<div class="title-logo">
 			<div class="valve-logo"></div>
 		</div>
-		<p class="sub-title-black"> Client - Spring 2015 </p>
+		<!-- <p class="sub-title-black"> Client - Spring 2015 </p> -->
+		<!-- <p class="sub-title-black">	Market Entry into Asia </p> -->
+		<p class="sub-title-gibson-black"> Client - Spring 2015 </p>
+		 <!-- <br> -->
 		<p class="sub-title-black">	Market Entry into Asia </p>
+
 <!-- 		<h2 class="sub-title"> First line of text that is only used for filler purposes</h2>
 		<h2 class="sub-title"> Second line of text that is only used for filler purposes</h2> -->
 	</div>
