--- a/voyager/static/css/image-import.css
+++ b/voyager/static/css/image-import.css
@@ -168,17 +168,22 @@
 .ucberkeley-picture {
 	background-image: url("../images/ucberkeley.jpg");
 	background-size: cover;
+	background-position: center;
 	/*opacity: 0.3;*/
 }
 
 .apply-box-picture {
 	background-image: url("../images/applypicture.jpg");
 	background-size: cover;
+	background-position: center;
+
 }
 
 .voyager-group-picture {
 	background-image: url("../images/voyager-consulting.jpg");
 	background-size: cover;
+	background-position: center;
+
 }
 
 .instagram-logo {
