--- a/voyager/static/css/main.css
+++ b/voyager/static/css/main.css
@@ -210,9 +210,9 @@ body {
 	/*z-index: 1;*/
 }
 
-/*.executive-member:hover {
-	z-index: 2;
-}*/
+#contact-form {
+	font-family: 'Lato', sans-serif;
+}
 
 .voyager-video {
 	width: 100%;
@@ -331,6 +331,7 @@ body {
 	/*color: white;*/
 	margin-bottom: 60px;
 	font-size: 20px;
+	font-family: 'Lato', sans-serif;
 }
 
 .picture-frame {
@@ -839,7 +840,7 @@ body {
 	width: 100%;
 	height: 100%;
 	border-radius: 5px;
-	opacity: 0.2;
+	opacity: 0.3;
 }
 
 .topleft {
