--- a/voyager/templates/contact.html
+++ b/voyager/templates/contact.html
@@ -10,7 +10,7 @@
 	<div class="page-container">
 		<div class="line-break"></div>
 		<!-- {{ form.subject.label_tag }} -->
-		<form action="/contact/" method="post">
+		<form id="contact-form" action="/contact/" method="post">
 			{% csrf_token %}
 			<div class="six columns subject-line">
 				{{ form.subject }}
