--- a/voyager/templates/services.html
+++ b/voyager/templates/services.html
@@ -15,7 +15,88 @@
 		<div class="three columns service-subject-frame"></div>
 		<div class="three columns service-subject-frame"></div>
 	</div>
-	<!-- <h1> ALRIRIRIRIGHGHGHT </h1> -->
+	<!-- <div class="generic-whitespace"></div> -->
+	<div class="services-box-container">
+		<div class="services-box">
+			<div class="service-box-title">
+				Title-1
+			</div>
+			<div class="service-box-picture">
+			</div>
+			<div class="service-box-description">
+				<p> description for particular box
+					filler fileer
+					awoeifjaowiefoawiefjoai
+				</p>
+			</div>
+		</div>
+		<div class="services-box">
+			<div class="service-box-title">
+				Title-1
+			</div>
+			<div class="service-box-picture">
+			</div>
+			<div class="service-box-description">
+				<p> description for particular box
+					filler fileer
+					awoeifjaowiefoawiefjoai
+				</p>
+			</div>
+		</div>
+		<div class="services-box">
+			<div class="service-box-title">
+				Title-1
+			</div>
+			<div class="service-box-picture">
+			</div>
+			<div class="service-box-description">
+				<p> description for particular box
+					filler fileer
+					awoeifjaowiefoawiefjoai
+				</p>
+			</div>
+		</div>
+		<div class="services-box">
+			<div class="service-box-title">
+				Title-1
+			</div>
+			<div class="service-box-picture">
+			</div>
+			<div class="service-box-description">
+				<p> description for particular box
+					filler fileer
+					awoeifjaowiefoawiefjoai
+				</p>
+			</div>
+		</div>
+		<div class="services-box">
+			<div class="service-box-title">
+				Title-1
+			</div>
+			<div class="service-box-picture">
+			</div>
+			<div class="service-box-description">
+				<p> description for particular box
+					filler fileer
+					awoeifjaowiefoawiefjoai
+				</p>
+			</div>
+		</div>
+		<div class="services-box">
+			<div class="service-box-title">
+				Title-1
+			</div>
+			<div class="service-box-picture">
+			</div>
+			<div class="service-box-description">
+				<p> description for particular box
+					filler fileer
+					awoeifjaowiefoawiefjoai
+				</p>
+			</div>
+		</div>
+		<!-- <h1> ALRIRIRIRIGHGHGHT </h1> -->
+	</div>
 	
 </body>
 {% include "footer.html" %}
