--- a/voyager/templates/contact.html
+++ b/voyager/templates/contact.html
@@ -3,6 +3,7 @@
 <body>
 	<div class="picture contact-picture">
 		<h2 class="page-title"> Contact </h2>
+		<div class="header-overlay"></div>
 	</div>
 	<div class="generic-whitespace"></div>
 	<h3 class="executive-panel-title"> Say Hello! </h3>
