--- a/voyager/templates/recruiting.html
+++ b/voyager/templates/recruiting.html
@@ -3,6 +3,7 @@
 <body>
 	<div class="picture recruiting-picture">
 		<h2 class="page-title"> Recruiting </h2>
+		<div class="header-overlay"></div>
 	</div>
 	<div class="generic-whitespace"></div>
 	<div class="page-container">
