--- a/voyager/static/css/main.css
+++ b/voyager/static/css/main.css
@@ -33,6 +33,14 @@ body {
 	z-index: 2;
 }
 
+.header-overlay {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: black;
+	opacity: 0.1;
+}
+
 .white {
 	color: white;
 }
@@ -712,6 +720,7 @@ body {
 	top: 0; bottom: 0; left: 0; right: 0;
 	color: white;
 	font-size: 600%;
+	z-index: 1;	
 	/*margin-top: 20px;*/
 
 }
