--- a/voyager/templates/careers.html
+++ b/voyager/templates/careers.html
@@ -4,6 +4,7 @@
 <body>
 	<div class="picture career-picture">
 		<h2 class="page-title"> Careers </h2>
+		<div class="header-overlay"></div>
 	</div>
 
 <!-- 	<div class="picture-text-overlay">
