--- a/voyager/templates/recruiting.html
+++ b/voyager/templates/recruiting.html
@@ -23,12 +23,23 @@
 			<tr>
 				<td> Voyager First InfoSession </td>
 				<td> September 9 </td>
-				<td> Moffit 102 </td>
+				<td> Moffit 101 </td>
 			</tr>
 			<tr>
 				<td> Voyager Second InfoSession </td>
 				<td> September 10 </td>
-				<td> Moffit 102 </td>
+				<td> Moffit 101 </td>
+			</tr>
+			<tr>
+				<td> Case Workshop </td>
+				<td> September 11 </td>
+				<td> Dwinelle 109 </td>
+			</tr>
+			<tr>
+				<td> App Deadline </td>
+				<td> September 12 </td>
+				<td></td>
+				<!-- <td> Dwinelle 109 </td> -->
 			</tr>
 			<tr>
 				<td> First Round Interviews </td>
