--- a/voyager/static/css/main.css
+++ b/voyager/static/css/main.css
@@ -227,6 +227,10 @@ body {
 	font-family: 'Lato', sans-serif;
 }
 
+#apply-form {
+	font-family: 'Lato', sans-serif;
+}
+
 .voyager-video {
 	width: 100%;
 	height: 70%;
@@ -415,9 +419,9 @@ body {
 	background-color: black;
 	height: 500px;
 	overflow: hidden;
-	-webkit-box-shadow: 0px 0px 10px 3px rgba(179,179,179,1);
-	-moz-box-shadow: 0px 0px 10px 3px rgba(179,179,179,1);
-	box-shadow: 0px 0px 10px 3px rgba(179,179,179,1);
+	-webkit-box-shadow: 0px 0px 1px 1px rgba(179,179,179,1);
+	-moz-box-shadow: 0px 0px 1px 1px rgba(179,179,179,1);
+	box-shadow: 0px 0px 1px 1px rgba(179,179,179,1);
 }
 
 .service-box-title {
@@ -446,7 +450,7 @@ body {
 }
 
 .services-box-container {
-	width: 70%;
+	width: 80%;
 	position: relative;
 	margin: 0 auto;
 	text-align: center;
@@ -460,6 +464,18 @@ body {
 	margin-left: 20px; margin-right: 20px;
 	top: 0; bottom: 0; left: 0; right: 0;
 	/*overflow: scroll;*/
+}
+
+.apply-description {
+	text-align: center;
+	font-family: 'Lato', sans-serif;
+}
+
+.logo-picture-box {
+	height: 200px;
+	width: 19%;
+	margin: auto;
+	/*background-color: black;*/
 }
 
 .about-mission-text-height {
